Edited ServerModule1 and log_in_form.Home.manage_products.manage_products1

--- a/client_code/log_in_form/Home/manage_products/manage_products1/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_products/manage_products1/form_template.yaml
@@ -48,9 +48,9 @@ components:
           layout_properties: {grid_position: 'CXRQEH,SLEMYG'}
           event_bindings: {click: link_1_copy_click}
         - type: XYPanel
-          properties: {height: 1098.9999618530273}
+          properties: {height: 1072.1999740600586}
           name: xy_panel_1
-          layout_properties: {grid_position: 'BTNLNY,ZODIFN'}
+          layout_properties: {grid_position: 'BTNLNY,LYLJMS'}
           components:
           - type: Label
             properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
@@ -130,6 +130,7 @@ components:
               include_placeholder: true
             name: drop_down_1
             layout_properties: {x: 177.00001525878906, y: 310.8000183105469, width: 232}
+            event_bindings: {change: drop_down_1_change}
           - type: Label
             properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
               visible: true, text: ' Product Group', font_size: null, font: '', spacing_above: small,
@@ -137,13 +138,57 @@ components:
               bold: false, underline: false, icon: ''}
             name: label_2
             layout_properties: {x: 0, y: 310.8000183105469, width: 160}
+          - type: DropDown
+            properties:
+              role: outlined
+              align: full
+              tooltip: ''
+              placeholder: Enter Your Categories
+              border: ''
+              enabled: true
+              foreground: ''
+              items: ['']
+              visible: true
+              font_size: null
+              font: ''
+              spacing_above: small
+              spacing_below: small
+              italic: false
+              background: ''
+              bold: false
+              underline: false
+              include_placeholder: true
+            name: drop_down_5
+            layout_properties: {x: 177, y: 361.8000183105469, width: 232}
+          - type: Label
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Product Categories', font_size: null, font: '',
+              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+              background: '', bold: false, underline: false, icon: ''}
+            name: label_3
+            layout_properties: {x: -1.7999954223632812, y: 361.8000183105469, width: 140.675}
+          - type: Label
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Processing Fee', font_size: null, font: '', spacing_above: small,
+              icon_align: left, spacing_below: small, italic: false, background: '',
+              bold: false, underline: false, icon: ''}
+            name: label_6_copy
+            layout_properties: {x: 0, y: 412.8000183105469, width: 160}
           - type: Label
             properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
               visible: true, text: ' Extension Fee', font_size: null, font: '', spacing_above: small,
               icon_align: left, spacing_below: small, italic: false, background: '',
               bold: false, underline: false, icon: ''}
             name: label_7_copy
-            layout_properties: {x: 0, y: 476.70001220703125, width: 160}
+            layout_properties: {x: -1.7750015258789062, y: 458.79998779296875, width: 160}
+          - type: TextBox
+            properties: {role: outlined, align: left, hide_text: false, tooltip: '',
+              placeholder: Enter Processing fee, border: '', enabled: true, foreground: '',
+              visible: true, text: '', font_size: null, font: '', spacing_above: small,
+              type: text, spacing_below: small, italic: false, background: '', bold: false,
+              underline: false}
+            name: text_box_3
+            layout_properties: {x: 177, y: 412.79998779296875, width: 232}
           - type: TextBox
             properties: {role: outlined, align: left, hide_text: false, tooltip: '',
               placeholder: Enter Extension fee, border: '', enabled: true, foreground: '',
@@ -151,20 +196,13 @@ components:
               type: text, spacing_below: small, italic: false, background: '', bold: false,
               underline: false}
             name: text_box_4
-            layout_properties: {x: 177, y: 476.70001220703125, width: 232}
-          - type: Label
-            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-              visible: true, text: ' Interest  Rate(%)', font_size: null, font: '',
-              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-              background: '', bold: false, underline: false, icon: ''}
-            name: label_8_copy
-            layout_properties: {x: 0, y: 528.3000122070313, width: 160}
+            layout_properties: {x: 177, y: 464.3999877929688, width: 232}
           - type: ColumnPanel
             properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
               wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"KEBGAJ":30,"JEVNRY":30}',
               spacing_below: small, background: '#CBCFD0'}
             name: column_panel_2
-            layout_properties: {x: 177, y: 535.75, width: 517}
+            layout_properties: {x: 177, y: 525.75, width: 517}
             components:
             - type: Label
               properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
@@ -303,11 +341,18 @@ components:
               layout_properties: {grid_position: 'RBEGUU,FUCJSH'}
           - type: Label
             properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Interest  Rate(%)', font_size: null, font: '',
+              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+              background: '', bold: false, underline: false, icon: ''}
+            name: label_8_copy
+            layout_properties: {x: -1.7750015258789062, y: 525.75, width: 160}
+          - type: Label
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
               visible: true, text: ' Discount  Coupons', font_size: null, font: '',
               spacing_above: small, icon_align: left, spacing_below: small, italic: false,
               background: '', bold: false, underline: false, icon: ''}
             name: label_14_copy
-            layout_properties: {x: 4.200004577636719, y: 861.2000732421875, width: 150}
+            layout_properties: {x: -1.7999954223632812, y: 845.2000122070312, width: 150}
           - type: RadioButton
             properties: {role: null, selected: false, align: left, tooltip: '', border: '',
               enabled: true, foreground: '', value: '', visible: true, text: 'Yes',
@@ -315,7 +360,7 @@ components:
               italic: false, background: '', bold: false, group_name: radioGroup2,
               underline: false}
             name: radio_button_3
-            layout_properties: {x: 177, y: 861.2000122070312, width: 67}
+            layout_properties: {x: 177, y: 845.2000122070312, width: 67}
             event_bindings: {clicked: radio_button_3_clicked}
           - type: RadioButton
             properties: {role: null, selected: false, align: left, tooltip: '', border: '',
@@ -324,82 +369,30 @@ components:
               italic: false, background: '', bold: false, group_name: radioGroup2,
               underline: false}
             name: radio_button_4
-            layout_properties: {x: 279, y: 861.2000122070312, width: 58}
-          - type: CheckBox
-            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-RO(10% off on interest),
-              font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, checked: false, underline: false}
-            name: check_box_2
-            layout_properties: {x: 148.875, y: 989.9375, width: 443}
+            layout_properties: {x: 279, y: 845.2000122070312, width: 58}
           - type: CheckBox
             properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
               foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-pf(10% off on processing fee),
               font_size: null, font: '', spacing_above: small, spacing_below: small,
               italic: false, background: '', bold: false, checked: false, underline: false}
             name: check_box_1
-            layout_properties: {x: 148.875, y: 933.2000732421875, width: 443}
+            layout_properties: {x: 148.87500457763673, y: 898.2000732421875, width: 443}
+          - type: CheckBox
+            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-RO(10% off on interest),
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, checked: false, underline: false}
+            name: check_box_2
+            layout_properties: {x: 148.875, y: 964.9375, width: 443}
           - type: Button
             properties: {role: outlined-button, align: center, tooltip: '', border: '',
-              enabled: true, foreground: Black, visible: true, text: NEXT, font_size: null,
+              enabled: true, foreground: Black, visible: true, text: SUBMIT, font_size: null,
               font: '', spacing_above: small, icon_align: left, spacing_below: small,
               italic: false, background: '#0876E8', bold: false, underline: false,
               icon: ''}
             name: button_1
-            layout_properties: {x: 4.200004577636719, y: 1042.2000732421875, width: 699}
+            layout_properties: {x: 4.200004577636719, y: 1017.4000244140625, width: 699}
             event_bindings: {click: button_1_click}
-          - type: DropDown
-            properties:
-              role: outlined
-              align: full
-              tooltip: ''
-              placeholder: Enter Your Categories
-              border: ''
-              enabled: true
-              foreground: ''
-              items: ['Credit Card ', Digital Loans against Mutual Funds, Gold Loans,
-                Home loan balance transfer, Top-up-loan, Pradhan Mantri AWAS Yojana,
-                Joint Home Loans, 'Womens home loan ', Home Construction loan, Plot for purchase,
-                Home loan for private employees, Home loan for government employees,
-                Home loan for bank employees, 'Home loan for advocates ', Car Loans,
-                Two-Wheeler Loans, Pre-owned Car Loans, Working capital loan, Term loan,
-                Equipment financing loans, Letter of Credit, Loan against property,
-                Point-of-Sale (POS) Loans, Invoice financing loans, Business overdraft,
-                Business loans under government schemes]
-              visible: true
-              font_size: null
-              font: ''
-              spacing_above: small
-              spacing_below: small
-              italic: false
-              background: ''
-              bold: false
-              underline: false
-              include_placeholder: true
-            name: drop_down_5
-            layout_properties: {x: 177, y: 361.8000183105469, width: 232}
-          - type: Label
-            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-              visible: true, text: ' Product categories', font_size: null, font: '',
-              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-              background: '', bold: false, underline: false, icon: ''}
-            name: label_3
-            layout_properties: {x: -1.8000000000000114, y: 361.8000183105469, width: 140.675}
-          - type: TextBox
-            properties: {role: outlined, align: left, hide_text: false, tooltip: '',
-              placeholder: Enter Processing fee, border: '', enabled: true, foreground: '',
-              visible: true, text: '', font_size: null, font: '', spacing_above: small,
-              type: text, spacing_below: small, italic: false, background: '', bold: false,
-              underline: false}
-            name: text_box_3
-            layout_properties: {x: 177, y: 412.8000183105469, width: 232}
-          - type: Label
-            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-              visible: true, text: ' Processing Fee', font_size: null, font: '', spacing_above: small,
-              icon_align: left, spacing_below: small, italic: false, background: '',
-              bold: false, underline: false, icon: ''}
-            name: label_6_copy
-            layout_properties: {x: 4.200004577636719, y: 418.3999877929688, width: 160}
 - type: FlowPanel
   properties: {}
   name: navbar_links
