Created log_in_form.Home.loan_management.approved_loans, log_in_form.Home.loan_management.approved_loans.RowTemplate2, log_in_form.Home.loan_management.approved_loans.view_profile, log_in_form.Home.loan_management.open_loans and 4 more; Edited log_in_form.Home.borrowers, log_in_form.Home.loan_management, log_in_form.Home.loan_management.rejected_loans, log_in_form.Home.loan_management.under_process and 1 more; Deleted log_in_form.Home.borrowers.Form10, log_in_form.Home.borrowers.Form6, log_in_form.Home.borrowers.Form7, log_in_form.Home.borrowers.Form8 and 12 more

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -176,6 +176,21 @@ db_schema:
     - name: total_repayment
       admin_ui: {order: 9, width: 200}
       type: number
+    - name: application_status
+      admin_ui: {width: 200, order: 10}
+      type: string
+    - name: timestamp
+      admin_ui: {width: 200, order: 11}
+      type: datetime
+    - name: member_rom
+      admin_ui: {width: 200, order: 13}
+      type: string
+    - name: payment_done
+      admin_ui: {width: 200, order: 14}
+      type: number
+    - name: beseem_score
+      admin_ui: {width: 200, order: 15}
+      type: string
     title: loan_details
   lender:
     client: none
