--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,24 +1,21 @@
 unique_ids:
   forms:
+    log_in_form.Home.loan_management.under_process.RowTemplate4: '1700991602351406994632888.35535'
     log_in_form.Home.revenue_share: '1698510617027417138837187.6812'
     log_in_form.Home.manage_products.view_product: '1700660552597613360259464.6619'
-    log_in_form.Home.loan_management.manual_disbursement: '1699007388935189643074159.93286'
-    log_in_form.Home.borrowers.Form8: '170012518227069608206066.96938'
     log_in_form.Home.manage_cms.edit: '1700208830761148321592340.13086'
     log_in_form.Home.loan_management.closed_loans: '169900757260896211433440.56126'
+    log_in_form.Home.loan_management.approved_loans.view_profile: '1700809539524917769017884.2534'
     log_in_form.Home.manage_settings.manage_facts.facts_edit_form: '1699431545406557144363579.9729'
     log_in_form.Home.manage_reports: '1698510790972444753270153.69006'
     log_in_form.Home: '169838228559032231040135.46263'
+    log_in_form.Home.loan_management.open_loans: '1700989124313805031285606.874'
     log_in_form.Home.manage_settings.manage_facts: '1699008960083449252857088.74243'
-    log_in_form.Home.loan_management.npa_form: '1699007541594815950811282.3915'
-    log_in_form.Home.borrowers.Form6: '1700125087238652600719232.1868'
-    log_in_form.Home.loan_management.ots_form: '1699007619743656257377013.5234'
-    log_in_form.Home.borrowers.update: '1700125397431298786318844.1817'
+    log_in_form.Home.loan_management.rejected_loans.view_profile_2: '1700991235552859923768746.176'
     log_in_form: GUGLRS4VVV3FBLZUMSK4OE75PW55BHQW
+    log_in_form.Home.loan_management.approved_loans: '1700989102210788946947726.7357'
     log_in_form.Home.manage_settings.manage_membership: '1699008921737741791321030.3928'
-    log_in_form.Home.borrowers.Form10: '1700125253376541793405586.8381'
     log_in_form.Home.loan_management: '1698510496370567653860910.7308'
-    log_in_form.Home.loan_management.loan_disbursed: '1699007343401922839978054.3939'
     log_in_form.Home.admin_teams.view_profile: '1698854972350390763170561.2675'
     log_in_form.Home.manage_products.edit_form: '170066057911177918763304.68495'
     log_in_form.Home.performance_tracke: '1698858550617535212188881.0073'
@@ -26,30 +23,25 @@ unique_ids:
     log_in_form.Home.loan_management.rejected_loans: '1699007498216132035280942.19319'
     log_in_form.Home.admin_teams.view_profile.update_form: '1698899789994986117374399.0231'
     log_in_form.Home.manage_settings: '1698510570970805808175551.8953'
-    log_in_form.Home.loan_management.lost_opportunities: '1699007461719824130369412.9452'
     log_in_form.Home.manage_products.view_product.view_profile: '1700731939370891877540560.8834'
-    log_in_form.Home.borrowers.Form7: '1700125149174798260451006.7322'
     log_in_form.Home.manage_cms.update: '1700208899567327850489516.46844'
     log_in_form.Home.admin_teams: '1698750803552258359376441.58456'
     Log_in_Home: '1698727115891669303119860.9404'
     log_in_form.Home.manage_products: '1698510531650695240800375.4204'
-    log_in_form.Home.loan_management.lapsed: '169900766496418104210797.048603'
-    log_in_form.Home.loan_management.defaulters.row: '1700809665088649383716548.1107'
-    log_in_form.Home.loan_management.defaulters.view_profile: '1700809539524917769017884.2534'
+    log_in_form.Home.loan_management.rejected_loans.RowTemplate3: '1700990906654891670182752.1731'
     log_in_form.Home.manage_settings.manage_roi: '1698728518958724320447228.9803'
+    log_in_form.Home.loan_management.approved_loans.RowTemplate2: '170098961145885880103428.35272'
     log_in_form.Home.manage_settings.manage_fee.fee_edit_form: '1699363428965272828870498.47583'
     log_in_form.Home.manage_products.manage_products1: '1700660507863931940498620.2151'
-    log_in_form.Home.borrowers.Form9: '1700125226414395175805049.5451'
     log_in_form.Home.admin_teams.view_profile.edit_form: '1698907575731908465721374.0109'
     log_in_form.Home.manage_cms.row: '1700642248315520962979899.10156'
     log_in_form.Home.risk_pool: '1698510663776338046362020.20764'
     log_in_form.Home.manage_products.add_groups: '170080498956345881868175.23132'
     log_in_form.Home.borrowers: '1698510391677311917004052.9009'
     log_in_form.Home.manage_products.add_categories: '1700660565187932854949977.6968'
-    log_in_form.Home.loan_management.defaulters: '1699007677809133269078101.18561'
     log_in_form.Home.loan_management.under_process: '1699007519934382529687066.75116'
     log_in_form.Home.manage_settings.manage_fee: '1699008892498722156546612.8901'
-    log_in_form.Home.borrowers.edit: '1700125275735422656269486.72394'
+    log_in_form.Home.loan_management.under_process.view_profile_3: '170099174820734113428911.9267'
     log_in_form.Home.lenders: '1698510463208765568412581.0891'
     log_in_form.Home.manage_products.update_form: '1700660591317831346418682.1431'
     log_in_form.Home.manage_products.view_product.RowTemplate1: '1700661028456970242389925.746'
