Edited log_in_form.Home.manage_products.view_product, log_in_form.Home.manage_products.edit_form, log_in_form.Home.manage_products.view_product.view_profile and log_in_form.Home.manage_products.view_product.RowTemplate1

--- a/client_code/log_in_form/Home/manage_products/view_product/RowTemplate1/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_products/view_product/RowTemplate1/form_template.yaml
@@ -31,4 +31,10 @@ components:
   event_bindings: {click: link_1_click}
   data_bindings:
   - {property: text, code: 'self.item[''product_id'']'}
+- type: Label
+  properties: {}
+  name: label_1
+  layout_properties: {column: UTFBQU}
+  data_bindings:
+  - {property: text, code: 'self.item[''product_group'']'}
 is_package: true
