--- a/anvil.yaml
+++ b/anvil.yaml
@@ -12,34 +12,334 @@ runtime_options: {version: 2, client_version: '3', server_version: python3-sandb
   server_spec: null}
 startup_form: null
 db_schema:
-  log_in_table:
+  product_details:
     client: full
     server: full
     columns:
-    - name: email
-      admin_ui: {width: 200, order: 0}
-      type: string
-    - name: password
-      admin_ui: {width: 200, order: 1}
-      type: string
-    title: log_in_table
-  roi_table:
-    client: full
-    server: full
-    columns:
-    - name: initial_investment
-      admin_ui: {width: 200, order: 0}
-      type: string
-    - name: tenure
+    - name: product_name
       admin_ui: {width: 200, order: 1}
       type: string
     - name: membership_type
-      admin_ui: {width: 200, order: 2}
-      type: string
-    - name: intrest_rate
       admin_ui: {width: 200, order: 3}
       type: string
-    title: ROI Table
+    - name: interest_type
+      admin_ui: {width: 200, order: 4}
+      type: string
+    - name: max_days
+      admin_ui: {width: 200, order: 5}
+      type: number
+    - name: roi
+      admin_ui: {width: 200, order: 7}
+      type: number
+    - name: discount_coupons
+      admin_ui: {width: 200, order: 8}
+      type: string
+    - name: processing_fee
+      admin_ui: {width: 200, order: 9}
+      type: number
+    - name: extension_fee
+      admin_ui: {width: 200, order: 10}
+      type: number
+    - name: min_days
+      admin_ui: {width: 200, order: 4.5}
+      type: number
+    - name: product_id
+      admin_ui: {order: -1, width: 200}
+      type: string
+    - name: product_group
+      admin_ui: {order: 12, width: 200}
+      type: string
+    - name: product_categories
+      admin_ui: {width: 200, order: 13}
+      type: string
+    title: product_details
+  user_profile:
+    client: none
+    server: full
+    columns:
+    - name: coustmer_id
+      admin_ui: {order: 0, width: 200}
+      type: number
+    - name: full_name
+      admin_ui: {width: 200, order: 1}
+      type: string
+    - name: user_photo
+      admin_ui: {width: 200, order: 2}
+      type: media
+    - name: profile_status
+      admin_ui: {width: 200, order: 3}
+      type: bool
+    - name: mail_id
+      admin_ui: {width: 200, order: 4}
+      type: string
+    - name: industry_type
+      admin_ui: {width: 200, order: 5}
+      type: string
+    - name: year_estd
+      admin_ui: {width: 200, order: 6}
+      type: date
+    - name: gender
+      admin_ui: {width: 200, order: 7}
+      type: string
+    - name: user_age
+      admin_ui: {width: 200, order: 8}
+      type: number
+    - name: date_of_birth
+      admin_ui: {width: 200, order: 9}
+      type: date
+    - name: street_adress_1
+      admin_ui: {width: 200, order: 10}
+      type: string
+    - name: street_address_2
+      admin_ui: {order: 11, width: 200}
+      type: string
+    - name: aadhaar_photo
+      admin_ui: {width: 200, order: 12}
+      type: media
+    - name: pan_photo
+      admin_ui: {width: 200, order: 13}
+      type: media
+    - name: usertype
+      admin_ui: {width: 200, order: 14}
+      type: string
+    - name: mobile
+      admin_ui: {width: 200, order: 15}
+      type: number
+    - name: pan_number
+      admin_ui: {order: 18, width: 200}
+      type: string
+    - name: aadhaar_no
+      admin_ui: {order: 16.5, width: 200}
+      type: string
+    - name: city
+      admin_ui: {width: 200, order: 19}
+      type: string
+    - name: email_user
+      admin_ui: {width: 200, order: 20}
+      type: string
+    - name: last_confirm
+      admin_ui: {width: 200, order: 21}
+      type: bool
+    - name: mobile_check
+      admin_ui: {width: 200, order: 22}
+      type: bool
+    - name: mouther_tounge
+      admin_ui: {width: 200, order: 23}
+      type: string
+    - name: marital_status
+      admin_ui: {width: 200, order: 24}
+      type: string
+    - name: Date_mariage
+      admin_ui: {width: 200, order: 25}
+      type: date
+    - name: spouse_name
+      admin_ui: {width: 200, order: 26}
+      type: string
+    - name: about
+      admin_ui: {width: 200, order: 27}
+      type: string
+    - name: alerts
+      admin_ui: {width: 200, order: 28}
+      type: bool
+    - name: terms
+      admin_ui: {width: 200, order: 29}
+      type: bool
+    - name: qualification
+      admin_ui: {width: 200, order: 30}
+      type: string
+    - name: address_type
+      admin_ui: {width: 200, order: 31}
+      type: string
+    - name: street
+      admin_ui: {width: 200, order: 32}
+      type: string
+    - name: building_name
+      admin_ui: {width: 200, order: 33}
+      type: string
+    - name: house_no
+      admin_ui: {width: 200, order: 34}
+      type: string
+    - name: house_landmark
+      admin_ui: {width: 200, order: 35}
+      type: string
+    - name: pincode
+      admin_ui: {width: 200, order: 36}
+      type: string
+    - name: state
+      admin_ui: {width: 200, order: 37}
+      type: string
+    - name: spouse_mobile
+      admin_ui: {width: 200, order: 38}
+      type: string
+    - name: spouse_company_name
+      admin_ui: {width: 200, order: 39}
+      type: string
+    - name: spouse_company_address
+      admin_ui: {width: 200, order: 40}
+      type: string
+    - name: education_certificate
+      admin_ui: {width: 200, order: 41}
+      type: media
+    - name: registration_approve
+      admin_ui: {width: 200, order: 42}
+      type: bool
+    - name: another_email
+      admin_ui: {width: 200, order: 43}
+      type: string
+    - name: country
+      admin_ui: {width: 200, order: 44}
+      type: string
+    - name: company_name
+      admin_ui: {width: 200, order: 45}
+      type: string
+    - name: organization_type
+      admin_ui: {width: 200, order: 46}
+      type: string
+    - name: profficen
+      admin_ui: {width: 200, order: 47}
+      type: string
+    - name: employment_type
+      admin_ui: {width: 200, order: 48}
+      type: string
+    - name: business_no
+      admin_ui: {width: 200, order: 49}
+      type: string
+    - name: company_landmark
+      admin_ui: {width: 200, order: 50}
+      type: string
+    - name: company_address
+      admin_ui: {width: 200, order: 51}
+      type: string
+    - name: annual_salary
+      admin_ui: {width: 200, order: 52}
+      type: string
+    - name: designation
+      admin_ui: {width: 200, order: 53}
+      type: string
+    - name: emp_id_proof
+      admin_ui: {width: 200, order: 54}
+      type: media
+    - name: last_six_month_bank_proof
+      admin_ui: {width: 200, order: 55}
+      type: media
+    - name: account_name
+      admin_ui: {width: 200, order: 56}
+      type: string
+    - name: account_type
+      admin_ui: {width: 200, order: 57}
+      type: string
+    - name: account_number
+      admin_ui: {width: 200, order: 58}
+      type: string
+    - name: account_bank_branch
+      admin_ui: {width: 200, order: 59}
+      type: string
+    - name: ifsc_code
+      admin_ui: {width: 200, order: 60}
+      type: string
+    - name: salary_type
+      admin_ui: {width: 200, order: 61}
+      type: string
+    - name: select_bank
+      admin_ui: {width: 200, order: 62}
+      type: string
+    - name: net_bank
+      admin_ui: {width: 200, order: 63}
+      type: string
+    - name: father_name
+      admin_ui: {width: 200, order: 64}
+      type: string
+    - name: father_age
+      admin_ui: {width: 200, order: 65}
+      type: string
+    - name: mother_name
+      admin_ui: {width: 200, order: 66}
+      type: string
+    - name: mother_age
+      admin_ui: {width: 200, order: 67}
+      type: string
+    - name: college_name
+      admin_ui: {width: 200, order: 68}
+      type: string
+    - name: college_id
+      admin_ui: {width: 200, order: 69}
+      type: string
+    - name: college_proof
+      admin_ui: {width: 200, order: 70}
+      type: media
+    - name: college_address
+      admin_ui: {width: 200, order: 71}
+      type: string
+    - name: running_Home_Loan
+      admin_ui: {width: 200, order: 72}
+      type: string
+    - name: other_loan
+      admin_ui: {width: 200, order: 73}
+      type: string
+    - name: running_or_live loans
+      admin_ui: {width: 200, order: 74}
+      type: string
+    - name: business_add
+      admin_ui: {width: 200, order: 75}
+      type: string
+    - name: business_location
+      admin_ui: {width: 200, order: 76}
+      type: string
+    - name: branch_name
+      admin_ui: {width: 200, order: 77}
+      type: string
+    - name: nearest_location
+      admin_ui: {width: 200, order: 78}
+      type: string
+    - name: employees_working
+      admin_ui: {width: 200, order: 79}
+      type: string
+    - name: business_type
+      admin_ui: {width: 200, order: 80}
+      type: string
+    - name: business_name
+      admin_ui: {width: 200, order: 81}
+      type: string
+    - name: director_no
+      admin_ui: {width: 200, order: 82}
+      type: string
+    - name: director_name
+      admin_ui: {width: 200, order: 83}
+      type: string
+    - name: cin
+      admin_ui: {width: 200, order: 84}
+      type: string
+    - name: din
+      admin_ui: {width: 200, order: 85}
+      type: string
+    - name: registered_off_add
+      admin_ui: {width: 200, order: 86}
+      type: string
+    - name: off_add_proof
+      admin_ui: {width: 200, order: 87}
+      type: string
+    - name: proof_verification
+      admin_ui: {width: 200, order: 88}
+      type: media
+    - name: six_month_turnover
+      admin_ui: {width: 200, order: 89}
+      type: string
+    - name: bank_name
+      admin_ui: {width: 200, order: 90}
+      type: string
+    - name: form_count
+      admin_ui: {width: 200, order: 91}
+      type: string
+    - name: spouse_designation
+      admin_ui: {width: 200, order: 92}
+      type: string
+    - name: spouse_annual_ctc
+      admin_ui: {width: 200, order: 93}
+      type: string
+    - name: spouse_office_number
+      admin_ui: {width: 200, order: 94}
+      type: string
+    title: user_profile
   admin_teams:
     client: full
     server: full
@@ -63,85 +363,6 @@ db_schema:
       admin_ui: {width: 200, order: 5}
       type: string
     title: admin_teams
-  manage_settings:
-    client: full
-    server: full
-    columns:
-    - name: manage_name
-      admin_ui: {width: 200, order: 0}
-      type: string
-    - name: tenure
-      admin_ui: {width: 200, order: 1}
-      type: string
-    - name: processing_fee
-      admin_ui: {width: 200, order: 2}
-      type: string
-    - name: extension_fee
-      admin_ui: {width: 200, order: 3}
-      type: string
-    - name: default_fee
-      admin_ui: {width: 200, order: 4}
-      type: string
-    - name: no_of_visitors
-      admin_ui: {width: 200, order: 5}
-      type: string
-    - name: no_of_borrowers
-      admin_ui: {width: 200, order: 6}
-      type: string
-    - name: no_of_lenders
-      admin_ui: {width: 200, order: 7}
-      type: string
-    - name: amount_disbursed
-      admin_ui: {order: 8, width: 200}
-      type: string
-    - name: lender_commitments
-      admin_ui: {width: 200, order: 8}
-      type: string
-    title: manage_settings
-  manage_products:
-    client: full
-    server: full
-    columns:
-    - name: product_id
-      admin_ui: {width: 200, order: 0}
-      type: string
-    - name: product_name
-      admin_ui: {width: 200, order: 1}
-      type: string
-    - name: membership_type
-      admin_ui: {width: 200, order: 2}
-      type: string
-    - name: processing_fee
-      admin_ui: {width: 200, order: 3}
-      type: string
-    - name: extension_fee
-      admin_ui: {width: 200, order: 4}
-      type: string
-    - name: defaulter_fee
-      admin_ui: {width: 200, order: 5}
-      type: string
-    - name: interest_type
-      admin_ui: {width: 200, order: 6}
-      type: string
-    - name: max_amount
-      admin_ui: {width: 200, order: 7}
-      type: string
-    - name: min_amount
-      admin_ui: {width: 200, order: 8}
-      type: string
-    - name: tenure
-      admin_ui: {width: 200, order: 9}
-      type: string
-    - name: extensions_allowed
-      admin_ui: {width: 200, order: 10}
-      type: string
-    - name: part_payments
-      admin_ui: {width: 200, order: 11}
-      type: string
-    - name: fore_closure
-      admin_ui: {width: 200, order: 12}
-      type: string
-    title: manage_products
   loan_details:
     client: full
     server: full
@@ -192,6 +413,102 @@ db_schema:
       admin_ui: {width: 200, order: 15}
       type: string
     title: loan_details
+  manage_products:
+    client: full
+    server: full
+    columns:
+    - name: product_id
+      admin_ui: {width: 200, order: 0}
+      type: string
+    - name: product_name
+      admin_ui: {width: 200, order: 1}
+      type: string
+    - name: membership_type
+      admin_ui: {width: 200, order: 2}
+      type: string
+    - name: processing_fee
+      admin_ui: {width: 200, order: 3}
+      type: string
+    - name: extension_fee
+      admin_ui: {width: 200, order: 4}
+      type: string
+    - name: defaulter_fee
+      admin_ui: {width: 200, order: 5}
+      type: string
+    - name: interest_type
+      admin_ui: {width: 200, order: 6}
+      type: string
+    - name: max_amount
+      admin_ui: {width: 200, order: 7}
+      type: string
+    - name: min_amount
+      admin_ui: {width: 200, order: 8}
+      type: string
+    - name: tenure
+      admin_ui: {width: 200, order: 9}
+      type: string
+    - name: extensions_allowed
+      admin_ui: {width: 200, order: 10}
+      type: string
+    - name: part_payments
+      admin_ui: {width: 200, order: 11}
+      type: string
+    - name: fore_closure
+      admin_ui: {width: 200, order: 12}
+      type: string
+    title: manage_products
+  manage_settings:
+    client: full
+    server: full
+    columns:
+    - name: manage_name
+      admin_ui: {width: 200, order: 0}
+      type: string
+    - name: tenure
+      admin_ui: {width: 200, order: 1}
+      type: string
+    - name: processing_fee
+      admin_ui: {width: 200, order: 2}
+      type: string
+    - name: extension_fee
+      admin_ui: {width: 200, order: 3}
+      type: string
+    - name: default_fee
+      admin_ui: {width: 200, order: 4}
+      type: string
+    - name: no_of_visitors
+      admin_ui: {width: 200, order: 5}
+      type: string
+    - name: no_of_borrowers
+      admin_ui: {width: 200, order: 6}
+      type: string
+    - name: no_of_lenders
+      admin_ui: {width: 200, order: 7}
+      type: string
+    - name: amount_disbursed
+      admin_ui: {order: 8, width: 200}
+      type: string
+    - name: lender_commitments
+      admin_ui: {width: 200, order: 8}
+      type: string
+    title: manage_settings
+  roi_table:
+    client: full
+    server: full
+    columns:
+    - name: initial_investment
+      admin_ui: {width: 200, order: 0}
+      type: string
+    - name: tenure
+      admin_ui: {width: 200, order: 1}
+      type: string
+    - name: membership_type
+      admin_ui: {width: 200, order: 2}
+      type: string
+    - name: intrest_rate
+      admin_ui: {width: 200, order: 3}
+      type: string
+    title: ROI Table
   lender:
     client: none
     server: full
@@ -203,45 +520,15 @@ db_schema:
       admin_ui: {width: 200, order: 1}
       type: string
     title: lender
-  product_details:
+  log_in_table:
     client: full
     server: full
     columns:
-    - name: product_name
+    - name: email
+      admin_ui: {width: 200, order: 0}
+      type: string
+    - name: password
       admin_ui: {width: 200, order: 1}
       type: string
-    - name: membership_type
-      admin_ui: {width: 200, order: 3}
-      type: string
-    - name: interest_type
-      admin_ui: {width: 200, order: 4}
-      type: string
-    - name: max_days
-      admin_ui: {width: 200, order: 5}
-      type: number
-    - name: roi
-      admin_ui: {width: 200, order: 7}
-      type: number
-    - name: discount_coupons
-      admin_ui: {width: 200, order: 8}
-      type: string
-    - name: processing_fee
-      admin_ui: {width: 200, order: 9}
-      type: number
-    - name: extension_fee
-      admin_ui: {width: 200, order: 10}
-      type: number
-    - name: min_days
-      admin_ui: {width: 200, order: 4.5}
-      type: number
-    - name: product_id
-      admin_ui: {order: -1, width: 200}
-      type: string
-    - name: product_group
-      admin_ui: {order: 12, width: 200}
-      type: string
-    - name: product_categories
-      admin_ui: {width: 200, order: 13}
-      type: string
-    title: product_details
+    title: log_in_table
 renamed: true
