--- a/client_code/log_in_form/Home/borrowers/form_template.yaml
+++ b/client_code/log_in_form/Home/borrowers/form_template.yaml
@@ -69,4 +69,8 @@ components:
       background: ''
     name: data_grid_1
     layout_properties: {grid_position: 'PMBVHN,NEKBQA'}
-    components: []
+    components:
+    - type: RepeatingPanel
+      properties: {spacing_above: none, spacing_below: none, item_template: log_in_form.Home.borrowers.RowTemplate6}
+      name: repeating_panel_1
+      layout_properties: {}
