--- a/client_code/log_in_form/Home/manage_products/manage_products1/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_products/manage_products1/form_template.yaml
@@ -377,13 +377,6 @@ components:
               italic: false, background: '', bold: false, checked: false, underline: false}
             name: check_box_1
             layout_properties: {x: 148.87500457763673, y: 898.2000732421875, width: 443}
-          - type: CheckBox
-            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-RO(10% off on interest),
-              font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, checked: false, underline: false}
-            name: check_box_2
-            layout_properties: {x: 148.875, y: 964.9375, width: 443}
           - type: Button
             properties: {role: outlined-button, align: center, tooltip: '', border: '',
               enabled: true, foreground: Black, visible: true, text: SUBMIT, font_size: null,
@@ -393,6 +386,13 @@ components:
             name: button_1
             layout_properties: {x: 4.200004577636719, y: 1017.4000244140625, width: 699}
             event_bindings: {click: button_1_click}
+          - type: CheckBox
+            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-RO(10% off on interest),
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, checked: false, underline: false}
+            name: check_box_2
+            layout_properties: {x: 148.8874938964844, y: 945.0500732421874, width: 443}
 - type: FlowPanel
   properties: {}
   name: navbar_links
