Created log_in_form.Home.borrowers.view_profile, log_in_form.Home.borrowers.view_profile.edit_form, log_in_form.Home.borrowers.view_profile.update_form, log_in_form.Home.lenders.RowTemplate5 and 3 more; Edited log_in_form.Home.lenders; Deleted log_in_form.Home.borrowers.RowTemplate5

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -3,7 +3,9 @@ unique_ids:
     log_in_form.Home.loan_management.under_process.RowTemplate4: '1700991602351406994632888.35535'
     log_in_form.Home.revenue_share: '1698510617027417138837187.6812'
     log_in_form.Home.manage_products.view_product: '1700660552597613360259464.6619'
+    log_in_form.Home.lenders.view_profile.update_form: '1701018881370960369691242.599'
     log_in_form.Home.manage_cms.edit: '1700208830761148321592340.13086'
+    log_in_form.Home.borrowers.view_profile: '1701018073055249519581475.10367'
     log_in_form.Home.loan_management.closed_loans: '169900757260896211433440.56126'
     log_in_form.Home.loan_management.approved_loans.view_profile: '1700809539524917769017884.2534'
     log_in_form.Home.manage_settings.manage_facts.facts_edit_form: '1699431545406557144363579.9729'
@@ -16,9 +18,10 @@ unique_ids:
     log_in_form: GUGLRS4VVV3FBLZUMSK4OE75PW55BHQW
     log_in_form.Home.loan_management.approved_loans: '1700989102210788946947726.7357'
     log_in_form.Home.manage_settings.manage_membership: '1699008921737741791321030.3928'
-    log_in_form.Home.borrowers.RowTemplate5: '170099538457826478318064.840023'
     log_in_form.Home.loan_management: '1698510496370567653860910.7308'
     log_in_form.Home.admin_teams.view_profile: '1698854972350390763170561.2675'
+    log_in_form.Home.lenders.view_profile.edit_form: '1701018867664386619071483.3697'
+    log_in_form.Home.lenders.view_profile: '1701018854801178509338378.06406'
     log_in_form.Home.manage_products.edit_form: '170066057911177918763304.68495'
     log_in_form.Home.performance_tracke: '1698858550617535212188881.0073'
     log_in_form.Home.manage_cms: '1698510754472259835130229.36667'
@@ -28,6 +31,8 @@ unique_ids:
     log_in_form.Home.manage_products.view_product.view_profile: '1700731939370891877540560.8834'
     log_in_form.Home.manage_cms.update: '1700208899567327850489516.46844'
     log_in_form.Home.admin_teams: '1698750803552258359376441.58456'
+    log_in_form.Home.borrowers.view_profile.update_form: '1701018232693403365201405.6641'
+    log_in_form.Home.lenders.RowTemplate5: '1701018594578507376100785.5355'
     Log_in_Home: '1698727115891669303119860.9404'
     log_in_form.Home.manage_products: '1698510531650695240800375.4204'
     log_in_form.Home.loan_management.rejected_loans.RowTemplate3: '1700990906654891670182752.1731'
@@ -36,6 +41,7 @@ unique_ids:
     log_in_form.Home.manage_settings.manage_fee.fee_edit_form: '1699363428965272828870498.47583'
     log_in_form.Home.manage_products.manage_products1: '1700660507863931940498620.2151'
     log_in_form.Home.admin_teams.view_profile.edit_form: '1698907575731908465721374.0109'
+    log_in_form.Home.borrowers.view_profile.edit_form: '1701018222526799188032123.388'
     log_in_form.Home.manage_cms.row: '1700642248315520962979899.10156'
     log_in_form.Home.risk_pool: '1698510663776338046362020.20764'
     log_in_form.Home.manage_products.add_groups: '170080498956345881868175.23132'
